--- a/ios/FD6FTracker/Info.plist
+++ b/ios/FD6FTracker/Info.plist
@@ -45,6 +45,8 @@
 	<array>
 		<string>armv7</string>
 	</array>
+	<key>UIStatusBarStyle</key>
+	<string>UIStatusBarStyleDefault</string>
 	<key>UISupportedInterfaceOrientations</key>
 	<array>
 		<string>UIInterfaceOrientationPortrait</string>
@@ -53,7 +55,7 @@
 	</array>
 	<key>UIViewControllerBasedStatusBarAppearance</key>
 	<false/>
-  <key>UIStatusBarStyle</key>
-  <string>UIStatusBarStyleDefault</string>
+	<key>NSBluetoothAlwaysUsageDescription</key>
+	<string>接触確認アプリのBluetooth信号を読み取るために必要です</string>
 </dict>
 </plist>
