--- a/package.json
+++ b/package.json
@@ -9,6 +9,7 @@
   },
   "dependencies": {
     "@expo/vector-icons": "^10.2.0",
+    "@react-native-community/art": "^1.2.0",
     "@react-native-community/masked-view": "^0.1.10",
     "@react-navigation/bottom-tabs": "^5.6.1",
     "@react-navigation/native": "^5.6.1",
@@ -21,6 +22,7 @@
     "react-native": "~0.62.2",
     "react-native-ble-manager": "^7.3.0",
     "react-native-gesture-handler": "^1.6.1",
+    "react-native-pie": "^1.1.2",
     "react-native-reanimated": "^1.9.0",
     "react-native-safe-area-context": "^3.0.7",
     "react-native-safe-area-view": "^1.1.1",
