--- a/package.json
+++ b/package.json
@@ -21,6 +21,7 @@
     "react-dom": "~16.11.0",
     "react-native": "~0.62.2",
     "react-native-ble-manager": "^7.3.0",
+    "react-native-ble-plx": "^2.0.0",
     "react-native-gesture-handler": "^1.6.1",
     "react-native-pie": "^1.1.2",
     "react-native-reanimated": "^1.9.0",
