--- a/ios/FD6FTracker.xcodeproj/xcshareddata/xcschemes/FD6FTracker.xcscheme
+++ b/ios/FD6FTracker.xcodeproj/xcshareddata/xcschemes/FD6FTracker.xcscheme
@@ -15,7 +15,7 @@
             <BuildableReference
                BuildableIdentifier = "primary"
                BlueprintIdentifier = "13B07F861A680F5B00A75B9A"
-               BuildableName = "FD6FTracker.app"
+               BuildableName = "FD6F Tracker Debug.app"
                BlueprintName = "FD6FTracker"
                ReferencedContainer = "container:FD6FTracker.xcodeproj">
             </BuildableReference>
@@ -55,7 +55,7 @@
          <BuildableReference
             BuildableIdentifier = "primary"
             BlueprintIdentifier = "13B07F861A680F5B00A75B9A"
-            BuildableName = "FD6FTracker.app"
+            BuildableName = "FD6F Tracker Debug.app"
             BlueprintName = "FD6FTracker"
             ReferencedContainer = "container:FD6FTracker.xcodeproj">
          </BuildableReference>
@@ -72,7 +72,7 @@
          <BuildableReference
             BuildableIdentifier = "primary"
             BlueprintIdentifier = "13B07F861A680F5B00A75B9A"
-            BuildableName = "FD6FTracker.app"
+            BuildableName = "FD6F Tracker Debug.app"
             BlueprintName = "FD6FTracker"
             ReferencedContainer = "container:FD6FTracker.xcodeproj">
          </BuildableReference>
