--- a/package.json
+++ b/package.json
@@ -33,6 +33,7 @@
     "react-native-screens": "^2.9.0",
     "react-native-unimodules": "~0.10.0",
     "react-native-web": "~0.11.7",
+    "reanimated-bottom-sheet": "^1.0.0-alpha.20",
     "unstated-next": "^1.1.0"
   },
   "devDependencies": {
